--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="dark:bg-gray-900 dark:text-zinc-100 mx-0">
+  <body class="dark:bg-gray-900 dark:text-zinc-100 mx-0 font-mono">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
